--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -15,7 +15,8 @@
     </p>&mdash; SpaceX (@SpaceX) 
     <a href="https://twitter.com/SpaceX/status/1732824684683784516?ref_src=twsrc%5Etfw">December 7, 2023</a>
   </blockquote> 
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <script async src="https://platform.twitter.com/widgets.js"></script>
+
 
   <p><a href="index.html">← Back to Home</a></p>
 <p><a href="tweets.html">See an awesome tweet from SpaceX!</a></p>
