--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My Portfolio Page</title>
+  <meta charset="UTF-8" />
+  <title>Home Page</title>
 </head>
 <body>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-  <h1>Welcome to My Portfolio</h1>
-  <p>This is a simple portfolio page created using HTML.</p>
+  <main>
+    <article>
+      <h1>Welcome to My Portfolio</h1>
 
-  <h2>About Me</h2>
-  <p>I am a frontend developer with a strong foundation in network operations and web design.</p>
+      <p>This is the first paragraph introducing the website.</p>
+      <p>Here is the second paragraph with some more information.</p>
 
-  <h3>My Skills</h3>
-  <p>I have worked on several projects involving HTML, CSS, and JavaScript. I am also familiar with Figma and web diagnostics.</p>
+      <h2>About Me</h2>
+      <p>This third paragraph gives a brief about me.</p>
 
-  <p>This is a sample paragraph for layout purposes. HTML is fun!</p>
+      <h3>Contact</h3>
+      <p>This fourth paragraph includes contact details or a call to action.</p>
 
-  <a href="https://www.alxafrica.com/" target="_blank">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-  </a>
+      <a href="https://alx-institute.org" target="_blank">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200" />
+      </a>
 
+      <p><a href="tweets.html">See my Tweets</a></p>
+    </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Sarsah-Arthur - <a href="https://www.linkedin.com/in/kasa1522/" target="_blank">here</a>.</p>
+  </footer>
 </body>
 </html>
