--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My Tweets</title>
+  <meta charset="UTF-8" />
+  <title>Tweets</title>
 </head>
 <body>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-  <h1>Embedded Tweet</h1>
+  <main>
+    <article>
+      <!-- Embedded tweet -->
+      <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Today, we celebrate the beauty of our diversity and the power of our unity.<br><br>At ALX, we’re proud to be part of a generation shaping the continent’s future across borders, cultures, and ideas. <a href="https://t.co/jAPIlUuBja">pic.twitter.com/jAPIlUuBja</a></p>&mdash; ALX_Ghana (@AlxGhana) <a href="https://twitter.com/AlxGhana/status/1926571931995615328?ref_src=twsrc%5Etfw">May 25, 2025</a></blockquote>
+      <script async src="https://platform.twitter.com/widgets.js" ></script>
 
-  <!-- Embedded SpaceX Tweet -->
-  <blockquote class="twitter-tweet">
-    <p lang="en" dir="ltr">At dawn from the gateway to Mars, the launch of Starship’s second flight test 
-      <a href="https://t.co/ffKnsVKwG4">pic.twitter.com/ffKnsVKwG4</a>
-    </p>&mdash; SpaceX (@SpaceX) 
-    <a href="https://twitter.com/SpaceX/status/1732824684683784516?ref_src=twsrc%5Etfw">December 7, 2023</a>
-  </blockquote> 
-  <script async src="https://platform.twitter.com/widgets.js"></script>
+      <p><a href="index.html">Back to Home</a></p>
+    </article>
 
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
 
-  <p><a href="index.html">← Back to Home</a></p>
-<p><a href="tweets.html">See an awesome tweet from SpaceX!</a></p>
-
+  <footer>
+    <p>Made by Sarsah-Arthur - <a href="https://www.linkedin.com/in/kasa1522/" target="_blank">here</a>.</p> 
+  </footer>
 </body>
 </html>
