Updating index.html and tweets.html with consistent layout and navigation

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Home Page</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
       <p>This fourth paragraph includes contact details or a call to action.</p>
 
       <a href="https://alx-institute.org" target="_blank">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200" />
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
       </a>
 
       <p><a href="tweets.html">See my Tweets</a></p>
