--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Tweets</title>
 </head>
 <body>
@@ -14,6 +14,7 @@
 
   <main>
     <article>
+      <h2>Featured Tweet</h2>
       <!-- Embedded tweet -->
       <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Today, we celebrate the beauty of our diversity and the power of our unity.<br><br>At ALX, we’re proud to be part of a generation shaping the continent’s future across borders, cultures, and ideas. <a href="https://t.co/jAPIlUuBja">pic.twitter.com/jAPIlUuBja</a></p>&mdash; ALX_Ghana (@AlxGhana) <a href="https://twitter.com/AlxGhana/status/1926571931995615328?ref_src=twsrc%5Etfw">May 25, 2025</a></blockquote>
       <script async src="https://platform.twitter.com/widgets.js" ></script>
