--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -16,20 +16,54 @@
     <article>
       <h1>Welcome to My Portfolio</h1>
 
-      <p>This is the first paragraph introducing the website.</p>
-      <p>Here is the second paragraph with some more information.</p>
-
+      <p>This is a simple HTML page created as part of my portfolio.</p>
+      
       <h2>About Me</h2>
-      <p>This third paragraph gives a brief about me.</p>
-
+      <p>I’m learning web development and this is one of my first projects.</p>
+      <p>I'm passionate about technology and design.</p>
+      <p>Thank you for visiting!</p>
+                                  
       <h3>Contact</h3>
-      <p>This fourth paragraph includes contact details or a call to action.</p>
+      <p>This paragraph includes contact details.</p>
 
       <a href="https://alx-institute.org" target="_blank">
         <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
       </a>
 
       <p><a href="tweets.html">See my Tweets</a></p>
+
+      <h4>Meet Some Learners</h4>
+      <table border="1">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+          </tr>
+          <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>Canada</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>32</td>
+            <td>Australia</td>
+          </tr>
+          <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+          </tr>
+        </tbody>
+      </table>
     </article>
 
     <aside>
