Adding learners table to index.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -33,7 +33,7 @@
       <p><a href="tweets.html">See my Tweets</a></p>
 
       <h4>Meet Some Learners</h4>
-      <table border="1">
+      <table>
         <thead>
           <tr>
             <th>Name</th>
